@@ -231,7 +231,7 @@ public class NativeJavaObject
             } else if (hint == ScriptRuntime.NumberClass) {
                 converterName = "doubleValue";
             } else {
-                throw Context.reportRuntimeError0("msg.default.value");
+                throw Context.reportRuntimeErrorById("msg.default.value");
             }
             Object converterObject = get(converterName, this);
             if (converterObject instanceof Function) {
@@ -243,7 +243,7 @@ public class NativeJavaObject
                     && javaObject instanceof Boolean)
                 {
                     boolean b = ((Boolean)javaObject).booleanValue();
-                    value = ScriptRuntime.wrapNumber(b ? 1.0 : 0.0);
+                    value = b ? ScriptRuntime.wrapNumber(1.0) : ScriptRuntime.zeroObj;
                 } else {
                     value = javaObject.toString();
                 }
@@ -826,7 +826,7 @@ public class NativeJavaObject
                                             Byte.MAX_VALUE));
         }
 
-        return new Double(toDouble(value));
+        return Double.valueOf(toDouble(value));
     }
 
 
@@ -901,7 +901,7 @@ public class NativeJavaObject
     {
         // It uses String.valueOf(value), not value.toString() since
         // value can be null, bug 282447.
-        throw Context.reportRuntimeError2(
+        throw Context.reportRuntimeErrorById(
             "msg.conversion.not.allowed",
             String.valueOf(value),
             JavaMembers.javaSignature(type));
